# key-mwe

./: .gitignore  README.md  pyproject.toml  wbs.md
src/key_mwe/: keyness_estimator.py  ngram_dict_tokeniser.py  npmi_estimator.py  text_preprocessor.py  workflow.py
tests/: test_keyness_estimator.py  test_ngram_dict_tokeniser.py  test_npmi_estimator.py
